--- a/README
+++ b/README
@@ -128,7 +128,7 @@ meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
 meta-oe           
 meta-gnome        = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
-meta-comodoo      = "master:113e8fd5d7d6c1a479fb3c75227695a2af19ad74"
+meta-comodoo      = "master:b0aeac8665328da1874f00d02617d9f62d64cd57"
 
 
 III. Framebuffer in RaspberryPi
@@ -151,5 +151,10 @@ IV. HOWTO launch the kiosk
 3. On the ssh terminal, launch 'x11vnc &'.
 4. When the VNC server is ready, open a VNC client on your host computer.
 5. Back on the ssh terminal, execute 'comodoo.sh &'.
-6. On the VNC client window, Firefox will appear on kiosk mode and
+6. On the VNC client window, Firefox will be launched on kiosk mode and
    it will load the Odoo login page.
+
+In case, you are not interested in login in Odoo service (for example,
+if you are running an Odoo Docker image), you can also pass an URL to
+'comodoo.sh': 'comodoo.sh <URL> &'. In this way, Firefox will load the
+specified webpage instead of default page.
