--- a/README
+++ b/README
@@ -17,8 +17,18 @@ This layer depends on:
   branch: krogoth
 
   URI: git://git.openembedded.org/meta-openembedded
-  layers: meta-oe, meta-gnome
+  layers: meta-oe, meta-gnome, meta-ruby, meta-python
   branch: krogoth
+
+  URI: git://github.com/meta-qt5/meta-qt5.git
+  branch: krogoth
+
+  URI: git://git.yoctoproject.org/meta-cloud-services
+  layers: meta-openstack
+  branch: master
+
+  URI: git://github.com/sarnold/meta-small-arm-extra.git
+  branch: master
 
   URI: git://github.com/mozilla-japan/meta-browser.git
   branch: firefox-45.0esr
@@ -49,6 +59,11 @@ BBLAYERS ?= " \
     /path/to/yocto/meta-yocto-bsp \
     /path/to/yocto/meta-openembedded/meta-oe \
     /path/to/yocto/meta-openembedded/meta-gnome \
+    /path/to/yocto/meta-openembedded/meta-ruby \
+    /path/to/yocto/meta-openembedded/meta-python \
+    /path/to/yocto/meta-qt5 \
+    /path/to/yocto/meta-cloud-services/meta-openstack \
+    /path/to/yocto/meta-small-arm-extra \
     /path/to/yocto/meta-browser \
     /path/to/yocto/meta-comodoo \
   "
@@ -60,31 +75,42 @@ for a Raspberry Pi 3:
 2. git clone git://git.yoctoproject.org/poky
    cd poky/
    git checkout -b krogoth origin/krogoth
-3. git clone git://git.yoctoproject.org/meta-raspberrypi
-   # No need to checkout another branch, only master branch has raspberrypi3.conf
-4. git clone git://git.openembedded.org/meta-openembedded
+3. git clone git://git.openembedded.org/meta-openembedded
    cd meta-openembedded/
    git checkout -b krogoth origin/krogoth
    cd ..
-5. git clone git://github.com/mozilla-japan/meta-browser.git
+4. git clone git://github.com/meta-qt5/meta-qt5.git
+   cd meta-qt5/
+   git checkout -b krogoth origin/krogoth
+   cd ..
+5. git clone git://git.yoctoproject.org/meta-cloud-services
+6. git clone git://github.com/sarnold/meta-small-arm-extra.git
+7. git clone git://git.yoctoproject.org/meta-raspberrypi
+   # No need to checkout another branch, only master branch has raspberrypi3.conf
+8. git clone git://github.com/mozilla-japan/meta-browser.git
    # Default brach is already firefox-45.0esr
-6. git clone git://github.com/indisoluble/meta-comodoo.git
+9. git clone git://github.com/indisoluble/meta-comodoo.git
    # Or git clone git@github.com:indisoluble/meta-comodoo.git
-7. source oe-init-build-env
-8. cd conf/
-9.nano bblayers.conf
+10. source oe-init-build-env
+11. cd conf/
+12.nano bblayers.conf
    # Edit var BBLAYERS as follows:
-BBLAYERS ?= " ng 
+BBLAYERS ?= "
     /path/to/yocto/meta \
     /path/to/yocto/meta-poky \
     /path/to/yocto/meta-yocto-bsp \
-    /path/to/yocto/meta-raspberrypi \
     /path/to/yocto/meta-openembedded/meta-oe \
     /path/to/yocto/meta-openembedded/meta-gnome \
+    /path/to/yocto/meta-openembedded/meta-ruby \
+    /path/to/yocto/meta-openembedded/meta-python \
+    /path/to/yocto/meta-qt5 \
+    /path/to/yocto/meta-cloud-services/meta-openstack \
+    /path/to/yocto/meta-small-arm-extra \
+    /path/to/yocto/meta-raspberrypi \
     /path/to/yocto/meta-browser \
     /path/to/yocto/meta-comodoo \
   "
-10. nano local.conf
+13. nano local.conf
    # Add following line to the end of the file:
 MACHINE ?= "raspberrypi3"
 
@@ -92,8 +118,10 @@ PREFERRED_PROVIDER_virtual/libgl = "mesa"
 PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
 PREFERRED_PROVIDER_virtual/egl = "mesa"
 PREFERRED_PROVIDER_virtual/mesa = "mesa"
-11. cd ..
-12. bitbake comodoo-image-firefox
+
+BBMASK += "/meta-cloud-services/meta-openstack/recipes-support/postgresql/"
+14. cd ..
+15. bitbake comodoo-image-pos
 
 The first image generated with this procedure might not work. In some
 cases, after transferring the image to the SD card, inserting it in the raspberrypi
@@ -103,7 +131,7 @@ raspberrypi. My recomendation in this case is:
 
 1. cd /path/to/yocto/build
 2. rm -fr tmp/
-3. bitbake comodoo-image-firefox
+3. bitbake comodoo-image-pos
 
 This time, the building process will be a lot faster and the new image generated
 in /path/to/yocto/build/tmp/deploy/images/raspberrypi3/ should be ok.
@@ -124,11 +152,16 @@ TARGET_FPU        = "hard"
 meta              
 meta-poky         
 meta-yocto-bsp    = "krogoth:8c69f7d56cbd496aa01ba0738675a170826a536b"
-meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
 meta-oe           
-meta-gnome        = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
+meta-gnome        
+meta-ruby         
+meta-python       = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
+meta-qt5          = "krogoth:1ec776771f5f09c97917d3839d8140f9a7668c4a"
+meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
+meta-small-arm-extra = "master:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
+meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
-meta-comodoo      = "master:b0aeac8665328da1874f00d02617d9f62d64cd57"
+meta-comodoo      = "krogoth-barcode:9d7577f61b066f45246600ba0b9e40b1c097f2c8"
 
 
 III. Framebuffer in RaspberryPi
