--- a/README
+++ b/README
@@ -161,7 +161,7 @@ meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
 meta-small-arm-extra = "master:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
 meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
-meta-comodoo      = "krogoth-barcode:9d7577f61b066f45246600ba0b9e40b1c097f2c8"
+meta-comodoo      = "krogoth-barcode:d765dddb12da2eda13fc18478375526b8ffd2536"
 
 
 III. Framebuffer in RaspberryPi
@@ -183,11 +183,12 @@ IV. HOWTO launch the kiosk
 2. Connect by ssh to the RaspberryPi.
 3. On the ssh terminal, launch 'x11vnc &'.
 4. When the VNC server is ready, open a VNC client on your host computer.
-5. Back on the ssh terminal, execute 'comodoo.sh &'.
-6. On the VNC client window, Firefox will be launched on kiosk mode and
+5. Back on the ssh terminal, execute 'comodoo-posboxless.sh &'.
+6. And then, execute 'comodoo-kiosk.py &'
+7. On the VNC client window, Firefox will be launched on kiosk mode and
    it will load the Odoo login page.
 
 In case, you are not interested in login in Odoo service (for example,
 if you are running an Odoo Docker image), you can also pass an URL to
-'comodoo.sh': 'comodoo.sh <URL> &'. In this way, Firefox will load the
-specified webpage instead of default page.
+'comodoo-kiosk.py': 'comodoo-kiosk.py --url <URL> &'. In this way,
+Firefox will load the specified webpage instead of the default page.
